--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "gh-pages": "0.12.0",
     "react-scripts": "0.9.5"
   },
+  "engines": {
+    "npm": "6.4.0",
+    "node": "8.11.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
